Fixed a problem with the home section not fitting properly when zoomed in

--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,6 @@ p{
 
 /* Grid */
 .app{
-    width: 100vw;
-    height: 100vh;
     display: grid;
     background-color: var(--bg-color);
 }
@@ -42,7 +40,7 @@ p{
 /* Sections */
 .home{
     width: 100%;
-    height: 100dvh;
+    min-height: 100dvh;
     background-image: linear-gradient(var(--secondary-color), var(--primary-color));
     color: #FFFFFF;
     display: flex;
@@ -50,12 +48,13 @@ p{
     justify-content: center;
     flex-direction: column;
     gap: 16px;
-}
+    padding: 32px;
+} 
 
 .home-logo{
     width: 30vw;
     aspect-ratio: 1 / 1;
-} 
+}
 
 /* Components */
 .button{
